Changed: Adjusted border on frames to 4px to make them easier to grab with the mouse. Changed: Thread title moved up into <h1> tags in delete.php Changed: Removed beehiveforum.dtd and added xhtml1-framespacing.dtd which doesn't have errors (duh) Fixed: You could edit a poll using edit.php and royally break things. Fixed: Lots of HTML validation errors including id attributes on form elements, missing and extra closing tags, un-needed <label> tags, incorrect order of <tr> and <td> and content inside <tr> etc. Fixed: Undefined variable $group_sizes in php.inc.php when editing a poll (show stopper bug will probably need a patch) Fixed: & not encoded in links.sys and timezone names in register.php and forum_options.php.

--- a/forum/styles/Default/style.css
+++ b/forum/styles/Default/style.css
@@ -1,4 +1,5 @@
 body {
+    border: none;
     background-color: #EAEFF4;
     margin-top: 10px;
     margin-bottom: 10px;
